--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -321,6 +321,9 @@ p {
   background-color: rgba(0, 0, 0, 0.75);
   z-index: 5; }
 
+.remove-overflow {
+  overflow: auto; }
+
 .input-container {
   display: flex;
   flex-direction: row;
